fdo#81341 : DOCX: EditTime is not geting preserved after RT

Issue :
	- LO was not able to Import EditTime field in "HH:MM:SS" format.
	- LO was Importing it as "HH:MM" format.
	- In getTime() third parameter is passed as "false" which is bSec.
          Because of which LO was not able to Import EditTime in seconds.

	Implementation :
	- Added code to check value of Seconds > 0.
	- Added code at Export side to write "EDITTIME" field.
	- Added Unit test case at Export side.

Because of which LO was not able to Import EditTime in seconds.

Change-Id: Ic740dc30d79be594dec9a0a05e407a7cb1a5941e